--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,3 +158,13 @@ exclude = '''
 )/
 '''
 
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["jsweb"]
+combine_as_imports = true
+force_sort_within_sections = true
+include_trailing_comma = true
+multi_line_output = 3
+
+
